--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
   </head>
-  <body>
+  <body ng-app="app">
+    <h1>To Do List</h1>
     <todo-list></todo-list>
-    <!-- <div>
-      <h1></h1>
-      <input type="text">
-      <button>add</button>
-      <ul>
-        <li></li>
-      </ul>
-      <hr/>
-      <pre></pre>
-    </div> -->
   </body>
 </html>
