--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body ng-app="app">
     <h1>To Do List</h1>
-    <todo-list></todo-list>
+    <todo-list todos="[]"></todo-list>
   </body>
 </html>
